--- a/cfcai-backend/docker-compose.yaml
+++ b/cfcai-backend/docker-compose.yaml
@@ -1,9 +1,18 @@
 version: "3.7"
 services:
-  backend:
-    build: .
-    ports: ['5000:5000']
+  app:
+    build: ./app
+    restart: always
+    ports:
+      - "8080:8080"
     env_file:
       - ./.env.dev
     volumes: ['.:/app']
-    command: /usr/local/bin/gunicorn -w 2 -t 3600 -b :5000 app:app --reload
+    command: /usr/local/bin/gunicorn -w 2 -t 3600 -b :8080 app.app:app --reload
+  nginx:
+    build: ./nginx
+    restart: always
+    ports:
+      - "80:80"
+    links:
+      - app:app
